--- a/views/Contact.html
+++ b/views/Contact.html
@@ -160,6 +160,7 @@
         </div>
       </div>
     </div>
+    </div>
     <footer class="mt-auto">
       <nav class="navbar navbar-expand-lg">
         <div class="container-md">
