--- a/views/Temoignage.html
+++ b/views/Temoignage.html
@@ -61,12 +61,11 @@
                 class="nav-link d-lg-block d-sm-none"
                 aria-current="page"
                 href="#"
-              >
-                <img
+                ><a href="/index.html">
+                  <img
                   id="logo"
-                  src="../assets/img/logo-afpa.webp"
-                  href="../index.html"
-              /></a>
+                  src="../assets/img/logo-afpa.webp">
+                </a>
             </li>
             <li class="nav-item burger">
               <a class="nav-link" href="Formation.html">Formation DWWM</a>
@@ -83,34 +82,6 @@
           </ul>
         </div>
       </div>
-        <div class="container-fluid text-center">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler border border-3 collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <i class="bi bi-list fs-2"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="container-fluid navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link d-lg-block d-sm-none" aria-current="page" href="#">
-                            <img id="logo" src="../assets/img/logo-afpa.webp" href="../index.html" /></a>
-                    </li>
-                    <li class="nav-item burger">
-                        <a class="nav-link" href="Formation.html">Formation DWWM</a>
-                    </li>
-                    <li class="nav-item burger">
-                        <a class="nav-link" href="Contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item burger">
-                        <a class="nav-link" href="References.html">Références</a>
-                    </li>
-                    <li class="nav-item burger">
-                        <a class="nav-link" href="Temoignage.html">Témoignage</a>
-                      </li>
-                </ul>
-            </div>
-        </div>
     </nav>
     <!-- END OF HEADER -->
     <!--test commentaire 4-->
@@ -385,5 +356,17 @@
         </div>
       </div>
     </div>
+    <footer class="mt-auto">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-md">
+          <a
+            class="navbar-brand"
+            href="https://www.afpa.fr/actualites/mentions-legal-1"
+            >Mentions légales</a
+          >
+          <a class="navbar-brand" href="#">Copyright</a>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
