--- a/views/Formation.html
+++ b/views/Formation.html
@@ -55,11 +55,13 @@
                 aria-current="page"
                 href="#"
               >
+              <a href="../index.html">
                 <img
-                  id="logo"
+                  id="logo2"
+                  class="d-lg-none d-sm-block"
                   src="../assets/img/logo-afpa.webp"
-                  href="index.html"
-              /></a>
+                />
+              </a>
             </li>
             <li class="nav-item burger">
               <a class="nav-link" href="../views/Formation.html"
@@ -71,9 +73,6 @@
             </li>
             <li class="nav-item burger">
               <a class="nav-link" href="../views/References.html">Références</a>
-            </li>
-            <li class="nav-item burger">
-              <a class="nav-link" href="/views/Temoignage.html">Témoignages</a>
             </li>
           </ul>
         </div>
