--- a/views/References.html
+++ b/views/References.html
@@ -29,149 +29,175 @@
     <link rel="stylesheet" href="../assets/css/references.css" />
     <title>References</title>
   </head>
-
-
-<body>
-  <!-- HEADER -->
-  <div id="fondafpa">
-    <img href="index.html" id="logo2" class="d-lg-none d-sm-block" src="../assets/img/logo-afpa.webp" />
-  </div>
-  <nav class="navbar navbar-expand-lg barredenav">
-    <div class="container-fluid text-center">
-      <a class="navbar-brand" href="#"></a>
-      <button class="navbar-toggler border border-3 collapsed" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="bi bi-list fs-2"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="container-fluid navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link d-lg-block d-sm-none" aria-current="page" href="#">
-              <img id="logo" src="../assets/img/logo-afpa.webp" href="../index.html" /></a>
-          </li>
-          <li class="nav-item burger">
-            <a class="nav-link" href="Formation.html">Formation DWWM</a>
-          </li>
-          <li class="nav-item burger">
-            <a class="nav-link" href="Contact.html">Contact</a>
-          </li>
-          <li class="nav-item burger">
-            <a class="nav-link" href="References.html">Références</a>
-          </li>
-          <li class="nav-item burger">
-            <a class="nav-link" href="Temoignage.html">Témoignage</a>
-          </li>
-        </ul>
+  <!--header-->
+  <body class="d-flex flex-column min-vh-100">
+    <div id="fondafpa">
+      <a href="../index.html">
+        <img
+          id="logo2"
+          class="d-lg-none d-sm-block"
+          src="../assets/img/logo-afpa.webp"
+        />
+      </a>
+    </div>
+    <nav class="navbar navbar-expand-lg barredenav">
+      <div class="container-fluid text-center">
+        <a class="navbar-brand" href="#"></a>
+        <button
+          class="navbar-toggler border border-3 collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="bi bi-list fs-2"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="container-fluid navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link d-lg-block d-sm-none"
+                aria-current="page"
+                href="#"
+              >
+                <img
+                  id="logo"
+                  src="assets/img/logo-afpa.webp"
+                  href="index.html"
+              /></a>
+            </li>
+            <li class="nav-item burger">
+              <a class="nav-link" href="views/Formation.html">Formation DWWM</a>
+            </li>
+            <li class="nav-item burger">
+              <a class="nav-link" href="views/Contact.html">Contact</a>
+            </li>
+            <li class="nav-item burger">
+              <a class="nav-link" href="views/References.html">Références</a>
+            </li>
+            <li class="nav-item burger">
+              <a class="nav-link" href="/views/Temoignage.html">Témoignages</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- END OF HEADER -->
+    <div class="container-lg">
+      <div class="row p-2 align-items-center">
+        <div class="col">
+          <img
+            src="../assets/img/ref-logo/lh-web-design.webp"
+            class="img-ref img-thumbnail"
+            alt="Agence Web"
+          />
+        </div>
+        <div class="col-10">
+          <a href="https://lhwebdesign.com/">
+            <h4>Agence Web</h4>
+          </a>
+          <p>
+            Que vous soyez un(e) auto-entrepreneur, une PME ou un grand groupe,
+            notre équipe aura toujours à cœur de vous accompagner dans vos
+            projets de A à Z ! Faire de vos projets une réussite est notre
+            priorité ! Notre valeur ajoutée est vraiment notre accompagnement et
+            notre vision business lors du développement de votre site.
+          </p>
+        </div>
+        <div class="row p-2 align-items-center">
+          <div class="col">
+            <img
+              src="../assets/img/ref-logo/digibase-web.png"
+              class="img-ref img-thumbnail"
+              alt="Digibase Web"
+            />
+          </div>
+          <div class="col-10">
+            <a href="https://www.digibase-web.fr/">
+              <h4>Digibase Web</h4>
+            </a>
+            <p>
+              Nous sommes convaincus qu’une transformation digitale réussie est
+              celle qui met l’humain au centre de toute réflexion et action.
+              Toujours orientés résultat et qualité, notre mission sera de
+              mettre les outils du numériques à votre portée afin d’accompagner
+              votre croissance et préparer l’avenir de votre entreprise. Nous
+              nous sommes dotés de partenaires qualifiés et expérimentés afin
+              d’assurer des prestations de haute qualité pour vous fournir un
+              résultat à la hauteur de vos espérances.
+            </p>
+          </div>
+        </div>
+        <div class="row p-2 align-items-center">
+          <div class="col">
+            <img
+              src="../assets/img/ref-logo/auxioma.png"
+              class="img-ref img-thumbnail"
+              alt="Auxioma"
+            />
+          </div>
+          <div class="col-10">
+            <a href="https://auxioma.eu/">
+              <h4>Auxioma</h4>
+            </a>
+            <p>
+              Auxioma : Nos web designer en france, en guadeloupe et martinique
+              son des artistes très créatifs pour des réalisations uniques.
+              L'empreinte du Web : La passion est une qualité de nos
+              développeurs pour donner vie à vos projets. Une agence locale en
+              Normandie : Le manager de votre projet sera vos unique
+              interlocuteur pour toutes les étapes de réalisation.
+            </p>
+          </div>
+        </div>
+        <div class="row p-2 align-items-center">
+          <div class="col">
+            <img
+              src="../assets/img/ref-logo/cocktail-numerique.svg"
+              class="img-ref img-thumbnail cocktail"
+              alt="Cocktail Numérique"
+            />
+          </div>
+          <div class="col-10">
+            <a href="https://cocktail-numerique.fr/">
+              <h4>Cocktail Numérique</h4>
+            </a>
+            <p>
+              Cocktail Numérique est une agence de communication et conseil en
+              web au Havre, qui propose des formations sur le numérique et
+              collabore avec un réseau étoffé de partenaires indépendants au
+              sein d’un même espace de coworking. Ensemble, nous aidons les
+              entreprises et commerçants à s’épanouir dans leur activité grâce à
+              la création de contenu digital qui leur ressemble et à une
+              meilleure visibilité sur le web.
+            </p>
+          </div>
+        </div>
+        <div class="row p-2 align-items-center">
+          <div class="col">
+            <img
+              src="../assets/img/ref-logo/fabiennail.png"
+              class="img-ref img-thumbnail"
+              alt="Fabien Nail Studio Graphique"
+            />
+          </div>
+          <div class="col-10">
+            <a href="https://www.fabiennail.com/">
+              <h4>Fabien Nail Studio Graphique</h4>
+            </a>
+            <p>
+              Graphiste et illustrateur basé au Havre, j’accompagne les
+              entreprises, agences et collectivités dans leur communication
+              visuelle, en créant leur identité graphique (logo, charte), leurs
+              supports (print, web et mobile) et les illustrations dont ils ont
+              besoin pour leurs affiches et événements.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
-  </nav>
-  <!-- END OF HEADER -->
-  <div class="container-lg">
-    <div class="row p-2 align-items-center">
-      <div class="col">
-        <img src="../assets/img/ref-logo/lh-web-design.webp" class="img-ref img-thumbnail" alt="Agence Web">
-      </div>
-      <div class="col-10">
-        <a href="https://lhwebdesign.com/">
-          <h4>Agence Web</h4>
-        </a>
-        <p>Que vous soyez un(e) auto-entrepreneur, une PME ou un grand groupe, notre équipe aura toujours à cœur de vous
-          accompagner dans vos projets de A à Z ! Faire de vos projets une réussite est notre priorité ! Notre valeur
-          ajoutée est vraiment notre accompagnement et notre vision business lors du développement de votre site. </p>
-
-      </div>
-      <div class="row p-2 align-items-center">
-        <div class="col">
-          <img
-            src="../assets/img/ref-logo/digibase-web.png"
-            class="img-ref img-thumbnail"
-            alt="Digibase Web"
-          />
-        </div>
-        <div class="col-10">
-          <a href="https://www.digibase-web.fr/">
-            <h4>Digibase Web</h4>
-          </a>
-          <p>
-            Nous sommes convaincus qu’une transformation digitale réussie est
-            celle qui met l’humain au centre de toute réflexion et action.
-            Toujours orientés résultat et qualité, notre mission sera de mettre
-            les outils du numériques à votre portée afin d’accompagner votre
-            croissance et préparer l’avenir de votre entreprise. Nous nous
-            sommes dotés de partenaires qualifiés et expérimentés afin d’assurer
-            des prestations de haute qualité pour vous fournir un résultat à la
-            hauteur de vos espérances.
-          </p>
-        </div>
-      </div>
-      <div class="row p-2 align-items-center">
-        <div class="col">
-          <img
-            src="../assets/img/ref-logo/auxioma.png"
-            class="img-ref img-thumbnail"
-            alt="Auxioma"
-          />
-        </div>
-        <div class="col-10">
-          <a href="https://auxioma.eu/">
-            <h4>Auxioma</h4>
-          </a>
-          <p>
-            Auxioma : Nos web designer en france, en guadeloupe et martinique
-            son des artistes très créatifs pour des réalisations uniques.
-            L'empreinte du Web : La passion est une qualité de nos développeurs
-            pour donner vie à vos projets. Une agence locale en Normandie : Le
-            manager de votre projet sera vos unique interlocuteur pour toutes
-            les étapes de réalisation.
-          </p>
-        </div>
-      </div>
-      <div class="row p-2 align-items-center">
-        <div class="col">
-          <img
-            src="../assets/img/ref-logo/cocktail-numerique.svg"
-            class="img-ref img-thumbnail cocktail"
-            alt="Cocktail Numérique"
-          />
-        </div>
-        <div class="col-10">
-          <a href="https://cocktail-numerique.fr/">
-            <h4>Cocktail Numérique</h4>
-          </a>
-          <p>
-            Cocktail Numérique est une agence de communication et conseil en web
-            au Havre, qui propose des formations sur le numérique et collabore
-            avec un réseau étoffé de partenaires indépendants au sein d’un même
-            espace de coworking. Ensemble, nous aidons les entreprises et
-            commerçants à s’épanouir dans leur activité grâce à la création de
-            contenu digital qui leur ressemble et à une meilleure visibilité sur
-            le web.
-          </p>
-        </div>
-      </div>
-      <div class="row p-2 align-items-center">
-        <div class="col">
-          <img
-            src="../assets/img/ref-logo/fabiennail.png"
-            class="img-ref img-thumbnail"
-            alt="Fabien Nail Studio Graphique"
-          />
-        </div>
-        <div class="col-10">
-          <a href="https://www.fabiennail.com/">
-            <h4>Fabien Nail Studio Graphique</h4>
-          </a>
-          <p>
-            Graphiste et illustrateur basé au Havre, j’accompagne les
-            entreprises, agences et collectivités dans leur communication
-            visuelle, en créant leur identité graphique (logo, charte), leurs
-            supports (print, web et mobile) et les illustrations dont ils ont
-            besoin pour leurs affiches et événements.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
     <footer class="mt-auto">
       <nav class="navbar navbar-expand-lg">
         <div class="container-md">
