--- a/views/Contact.html
+++ b/views/Contact.html
@@ -16,6 +16,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../assets/img/AFPA.gif"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
@@ -28,65 +33,69 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <title>Contact</title>
+    <title>Afpa - Contact</title>
   </head>
 
   <body>
     <!-- HEADER -->
-    <div id="fondafpa">
-      <a href="../index.html">
-        <img
-          id="logo2"
-          class="d-lg-none d-sm-block"
-          src="../assets/img/logo-afpa.webp"
-        />
-      </a>
-    </div>
-    <nav class="navbar navbar-expand-lg barredenav">
-      <div class="container-fluid text-center">
-        <a class="navbar-brand" href="#"></a>
-        <button
-          class="navbar-toggler border border-3 collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i class="bi bi-list fs-2"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="container-fluid navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link d-lg-block d-sm-none"
-                aria-current="page"
-                href="#"
-              >
-                <img
-                  id="logo"
-                  src="../assets/img/logo-afpa.webp"
-                  href="../index.html"
-              /></a>
-            </li>
-            <li class="nav-item burger">
-              <a class="nav-link" href="Formation.html">Formation DWWM</a>
-            </li>
-            <li class="nav-item burger">
-              <a class="nav-link" href="Contact.html">Contact</a>
-            </li>
-            <li class="nav-item burger">
-              <a class="nav-link" href="References.html">Références</a>
-            </li>
-            <li class="nav-item burger">
-              <a class="nav-link" href="/views/Temoignage.html">Témoignages</a>
-            </li>
-          </ul>
-        </div>
+    <body class="d-flex flex-column min-vh-100">
+      <div id="fondafpa">
+        <a href="../index.html">
+          <img
+            id="logo2"
+            class="d-lg-none d-sm-block"
+            src="../assets/img/logo-afpa.webp"
+          />
+        </a>
       </div>
-    </div>
-  </nav>
+      <nav class="navbar navbar-expand-lg barredenav">
+        <div class="container-fluid text-center">
+          <a class="navbar-brand" href="#"></a>
+          <button
+            class="navbar-toggler border border-3 collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="bi bi-list fs-2"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="container-fluid navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link d-lg-block d-sm-none"
+                  aria-current="page"
+                  href="../index.html"
+                >
+                  <img
+                    id="logo"
+                    src="../assets/img/logo-afpa.webp"
+                    href="index.html"
+                /></a>
+              </li>
+              <li class="nav-item burger">
+                <a class="nav-link" href="../views/Formation.html"
+                  >Formation DWWM</a
+                >
+              </li>
+              <li class="nav-item burger">
+                <a class="nav-link" href="../views/Contact.html">Contact</a>
+              </li>
+              <li class="nav-item burger">
+                <a class="nav-link" href="../views/References.html">Références</a>
+              </li>
+              <li class="nav-item burger">
+                <a class="nav-link" href="../views/Temoignage.html"
+                  >Témoignages</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
   <!-- END OF HEADER -->
   <div class="container-lg">
     <h1 class="display-3 my-4">Nous contacter</h1>
@@ -127,8 +136,8 @@
     <!-- Google Maps -->
     <div class="row">
       <div class="col"><iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2590.453926629674!2d0.1668869768548194!3d49.51370545436686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e02fe40985f1ff%3A0x89e1a03a20457b7b!2sA.F.P.A%20Vocational%20Training%20Center%20for%20Adults!5e0!3m2!1sru!2sfr!4v1682346623950!5m2!1sru!2sfr"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2590.453926629674!2d0.1668869768548194!3d49.51370545436686!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e02fe40985f1ff%3A0x89e1a03a20457b7b!2sA.F.P.A%20Vocational%20Training%20Center%20for%20Adults!5e0!3m2!1sru!2sfr!4v1682346623950!5m2!1sru!2sfr&amp;language=fr"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe></div>
       <div class="col">
         <div class="adress p-2">
