--- a/views/Formation.html
+++ b/views/Formation.html
@@ -15,12 +15,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
+    <link rel="icon" type="image/x-icon" href="../assets/img/AFPA.gif" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Afpa - Formation DWWM</title>
   </head>
   <!--HEADER-->
   <body class="d-flex flex-column min-vh-100">
@@ -53,15 +54,13 @@
               <a
                 class="nav-link d-lg-block d-sm-none"
                 aria-current="page"
-                href="#"
+                href="../index.html"
               >
-              <a href="../index.html">
                 <img
-                  id="logo2"
-                  class="d-lg-none d-sm-block"
+                  id="logo"
                   src="../assets/img/logo-afpa.webp"
-                />
-              </a>
+                  href="index.html"
+              /></a>
             </li>
             <li class="nav-item burger">
               <a class="nav-link" href="../views/Formation.html"
@@ -73,6 +72,11 @@
             </li>
             <li class="nav-item burger">
               <a class="nav-link" href="../views/References.html">Références</a>
+            </li>
+            <li class="nav-item burger">
+              <a class="nav-link" href="../views/Temoignage.html"
+                >Témoignages</a
+              >
             </li>
           </ul>
         </div>
