--- a/views/References.html
+++ b/views/References.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
+    <link rel="icon" type="image/x-icon" href="../assets/img/AFPA.gif" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
@@ -27,9 +28,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../assets/css/references.css" />
-    <title>References</title>
+    <title>Afpa - Références</title>
   </head>
-  <!--header-->
+  <!-- HEADER -->
   <body class="d-flex flex-column min-vh-100">
     <div id="fondafpa">
       <a href="../index.html">
@@ -60,25 +61,29 @@
               <a
                 class="nav-link d-lg-block d-sm-none"
                 aria-current="page"
-                href="#"
+                href="../index.html"
               >
                 <img
                   id="logo"
-                  src="assets/img/logo-afpa.webp"
+                  src="../assets/img/logo-afpa.webp"
                   href="index.html"
               /></a>
             </li>
             <li class="nav-item burger">
-              <a class="nav-link" href="views/Formation.html">Formation DWWM</a>
+              <a class="nav-link" href="../views/Formation.html"
+                >Formation DWWM</a
+              >
             </li>
             <li class="nav-item burger">
-              <a class="nav-link" href="views/Contact.html">Contact</a>
+              <a class="nav-link" href="../views/Contact.html">Contact</a>
             </li>
             <li class="nav-item burger">
-              <a class="nav-link" href="views/References.html">Références</a>
+              <a class="nav-link" href="../views/References.html">Références</a>
             </li>
             <li class="nav-item burger">
-              <a class="nav-link" href="/views/Temoignage.html">Témoignages</a>
+              <a class="nav-link" href="../views/Temoignage.html"
+                >Témoignages</a
+              >
             </li>
           </ul>
         </div>
