--- a/views/Temoignage.html
+++ b/views/Temoignage.html
@@ -15,6 +15,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../assets/img/AFPA.gif"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
@@ -26,63 +31,69 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <title>Témoignage</title>
+    <title>Afpa - Témoignages</title>
   </head>
 
   <body>
     <!-- HEADER -->
-    <div id="fondafpa">
-      <a href="../index.html">
-        <img
-          id="logo2"
-          class="d-lg-none d-sm-block"
-          src="../assets/img/logo-afpa.webp"
-        />
-      </a>
-    </div>
-    <nav class="navbar navbar-expand-lg barredenav">
-      <div class="container-fluid text-center">
-        <a class="navbar-brand" href="#"></a>
-        <button
-          class="navbar-toggler border border-3 collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <i class="bi bi-list fs-2"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="container-fluid navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link d-lg-block d-sm-none"
-                aria-current="page"
-                href="#"
-                ><a href="/index.html">
-                  <img
-                  id="logo"
-                  src="../assets/img/logo-afpa.webp">
-                </a>
-            </li>
-            <li class="nav-item burger">
-              <a class="nav-link" href="Formation.html">Formation DWWM</a>
-            </li>
-            <li class="nav-item burger">
-              <a class="nav-link" href="Contact.html">Contact</a>
-            </li>
-            <li class="nav-item burger">
-              <a class="nav-link" href="References.html">Références</a>
-            </li>
-            <li class="nav-item burger">
-              <a class="nav-link" href="/views/Temoignage.html">Témoignages</a>
-            </li>
-          </ul>
-        </div>
+    <body class="d-flex flex-column min-vh-100">
+      <div id="fondafpa">
+        <a href="../index.html">
+          <img
+            id="logo2"
+            class="d-lg-none d-sm-block"
+            src="../assets/img/logo-afpa.webp"
+          />
+        </a>
       </div>
-    </nav>
+      <nav class="navbar navbar-expand-lg barredenav">
+        <div class="container-fluid text-center">
+          <a class="navbar-brand" href="#"></a>
+          <button
+            class="navbar-toggler border border-3 collapsed"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="bi bi-list fs-2"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="container-fluid navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link d-lg-block d-sm-none"
+                  aria-current="page"
+                  href="../index.html"
+                >
+                  <img
+                    id="logo"
+                    src="../assets/img/logo-afpa.webp"
+                    href="index.html"
+                /></a>
+              </li>
+              <li class="nav-item burger">
+                <a class="nav-link" href="../views/Formation.html"
+                  >Formation DWWM</a
+                >
+              </li>
+              <li class="nav-item burger">
+                <a class="nav-link" href="../views/Contact.html">Contact</a>
+              </li>
+              <li class="nav-item burger">
+                <a class="nav-link" href="../views/References.html">Références</a>
+              </li>
+              <li class="nav-item burger">
+                <a class="nav-link" href="../views/Temoignage.html"
+                  >Témoignages</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <!-- END OF HEADER -->
     <!--test commentaire 4-->
     <div class="container-lg">
